--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "ember-resolver": "^2.0.3",
     "emberfire": "1.6.6",
     "loader.js": "^4.0.1"
+  },
+  "dependencies": {
+    "ember-moment": "^6.1.0"
   }
 }
